--- a/package.json
+++ b/package.json
@@ -1,15 +1,5 @@
 {
   "name": "kavy",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "chalk": "^5.3.0"
-  }
+  "main": "index.js"
 }
